<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="20dp"
    tools:context=".fragments.ProfilePage">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp">

        <LinearLayout
            android:id="@+id/navHeader"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/arrow_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:fontFamily="sans-serif-medium"
                android:text="Settings"
                android:textColor="@color/pink"
                android:textSize="25sp" />

        </LinearLayout>


        <ImageView
            android:id="@+id/userAccountProfilePic"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/empty_profie_pic"
            android:contentDescription="@string/user_picture"
            android:padding="20dp"
            android:src="@drawable/person"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/navHeader" />

        <TextView
            android:id="@+id/userFirstLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/firstName"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/userAccountProfilePic" />

        <TextView
            android:id="@+id/userEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif"
            android:text="@string/email"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/userFirstLastName" />

        <TextView
            android:id="@+id/settingText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawablePadding="10dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/settings"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:drawableStartCompat="@drawable/settings_icon"
            app:drawableTint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userEmail" />

        <TextView
            android:id="@+id/notificationText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawablePadding="10dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/notification"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:drawableStartCompat="@drawable/notifications"
            app:drawableTint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settingText" />

        <TextView
            android:id="@+id/Terms_conditionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawablePadding="10dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/TC"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:drawableStartCompat="@drawable/newspaper_icon"
            app:drawableTint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/notificationText" />

        <TextView
            android:id="@+id/aboutUs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawablePadding="10dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/aboutUs"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:drawableStartCompat="@drawable/info_icon"
            app:drawableTint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Terms_conditionText" />

        <TextView
            android:id="@+id/contactUsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawablePadding="10dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/contactUs"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:drawableStartCompat="@drawable/contact_support_icon"
            app:drawableTint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/aboutUs" />

        <TextView
            android:id="@+id/logOutText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:drawablePadding="10dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/log_out"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:drawableStartCompat="@drawable/exit_to_app"
            app:drawableTint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contactUsText" />

        <TextView
            android:id="@+id/myName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/exypnosDesign"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logOutText"
            android:layout_marginTop="50dp"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>