<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/OBmain"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.onBoardingScreen">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/slideViewPager"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginVertical="50dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/slide_image"
        app:layout_constraintBottom_toTopOf="@+id/indicatorLayout"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/indicatorLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/relativeLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/slideViewPager" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/indicatorLayout">

        <ImageView
            android:id="@+id/leftArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/left_arrow"
            android:src="@drawable/arrow_circle_left"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/skipText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/rightArrow"
            android:layout_toEndOf="@+id/leftArrow"
            android:fontFamily="sans-serif-medium"
            android:text="@string/skip"
            android:textAlignment="center"
            android:textColor="@color/pink"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/rightArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/right_arrow"
            android:src="@drawable/arrow_circle_right" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>